--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,17 +23,17 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.github.krtkush:LinearTimer:v2.1.1'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'io.github.kexanie.library:MathView:0.0.6'
     implementation "com.google.android.material:material:1.1.0-alpha02"
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
-    implementation 'com.github.Nishant-Pathak:MathView:v1.1'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    implementation 'com.github.javiersantos:MaterialStyledDialogs:2.1'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
