--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="in.edu.mmit.quiz">
 
+    <uses-permission android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
 
     <application
         android:allowBackup="true"
@@ -11,24 +21,28 @@
         android:hardwareAccelerated="false"
         android:icon="@drawable/ic_launcher_round"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
         android:largeHeap="true"
         android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:replace="android:appComponentFactory,android:hardwareAccelerated">
-        <activity android:name=".Test_Papers"></activity>
+        <activity android:name=".Test_Papers" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Splash"
             android:label="MMIT Mock CET"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".second_main"
             android:screenOrientation="portrait" />
@@ -59,6 +73,10 @@
         <activity
             android:name=".Bookmark_layout"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".video"
+            android:hardwareAccelerated="true"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
